anthos-bm-gcp-terraform/resources/manifests/point-of-sale.yaml
# [START anthosbaremetal_manifests_point_of_sale_deployment_api_server]
####################################################
#            Deployments - API Server
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: api-server
        image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/api-server:v1
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /api/ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10
# [END anthosbaremetal_manifests_point_of_sale_deployment_api_server]
---
# [START anthosbaremetal_manifests_point_of_sale_deployment_payments]
####################################################
#          Deployments - Payments Service
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: payments
        image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/payments:v1
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10
# [END anthosbaremetal_manifests_point_of_sale_deployment_payments]
---
# [START anthosbaremetal_manifests_point_of_sale_deployment_inventory]
####################################################
#         Deployments - Inventory Servies
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 5
      containers:
      - name: inventory
        image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/inventory:v1
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10
# [END anthosbaremetal_manifests_point_of_sale_deployment_inventory]
---
# [START anthosbaremetal_manifests_point_of_sale_service_api_server_svc]
####################################################
#            Services - Type ClusterIP
####################################################
apiVersion: v1
kind: Service
metadata:
  name: api-server-svc
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END anthosbaremetal_manifests_point_of_sale_service_api_server_svc]
---
# [START anthosbaremetal_manifests_point_of_sale_service_payments_svc]
apiVersion: v1
kind: Service
metadata:
  name: payments-svc
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END anthosbaremetal_manifests_point_of_sale_service_payments_svc]
---
# [START anthosbaremetal_manifests_point_of_sale_service_inventory_svc]
apiVersion: v1
kind: Service
metadata:
  name: inventory-svc
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
  - name: http
    port: 8080
    targetPort: 8080
# [END anthosbaremetal_manifests_point_of_sale_service_inventory_svc]
