anthos-bm-gcp-terraform/resources/manifests/pos-ingress.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and

#################################################################
# You have to have the Point-of-Sale application deployed first
# kubectl apply -f \
#   https://raw.githubusercontent.com/GoogleCloudPlatform/anthos-samples/main/anthos-bm-gcp-terraform/resources/manifests/point-of-sale.yaml
#################################################################

# [START anthosbaremetal_manifests_pos_ingress_ingress_pos_ingress]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: api-server-svc
            port:
              number: 8080
# [END anthosbaremetal_manifests_pos_ingress_ingress_pos_ingress]
